<resources>
    <string name="app_name">Bright Me</string>

    <!-- Bottom Navigation page -->
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity">Activity</string>
    <string name="title_shop">Shop</string>

    <!-- Onboarding page -->
    <string name="header_1">Know and promote\nlocal skincare products</string>
    <string name="subheader_1">Know Indonesian skincare products and develop\ntogether for advanced Indonesia</string>
    <string name="header_2">Technology-assisted\nskin health detection</string>
    <string name="subheader_2">Know the condition of your facial skin with just a photo\nand you will be given product recommendations</string>
    <string name="header_3">Consultation and join\nthe community</string>
    <string name="subheader_3">Consult your facial skin with the doctor and join\nthe community to promote local products</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="prev">Prev</string>
    <string name="get_started">Get Started</string>

    <!-- Login page -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_option">- or with Google -</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>

    <!-- Forgot Password page -->
    <string name="subheader_forgot_password">Don\'t worry. It happened. Please enter the address associated with your account</string>
    <string name="submit">Submit</string>

    <!-- Reset Password page -->
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_password_success">Congratulations, the\npassword update was\nsuccessful!</string>
    <string name="update">Update</string>

    <!-- OTP Verification page -->
    <string name="header_verification">OTP Verification</string>
    <string name="subheader_verification">We will send you a one-time OTP code\non this your email</string>

    <!-- Register page -->
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="terms_and_condition">By registering, I agree with the terms and condition</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Home page -->
    <string name="hello">Hello,</string>
    <string name="name">Name</string>
    <string name="header_home">Lets Grow <b>Together</b>,\nSupport <b>Local</b> Products!</string>
    <string name="search_hint_home">Find products, doctor, information here</string>
    <string name="subheader_home_1">Information for you</string>
    <string name="subheader_home_2">What do you feel now?</string>
    <string name="subheader_home_3">Popular skincare products</string>
    <string name="view_more">View More</string>
    <string name="black_spots">Black Spots</string>
    <string name="wrinkle_skin">Wrinkle Skin</string>
    <string name="title_product">Title Product</string>
    <string name="merk_product">Merk</string>
    <string name="price_product">Price</string>
    <string name="about_local_products">About local halal products</string>
    <string name="news_title_1">Hebat! Ini Brand Kecantikan Lokal yang Sudah Go International</string>
    <string name="news_date_1">Jul 11 ~ 5.43 PM</string>
    <string name="news_title_2">Bagaimana Skin Care Lokal Bertahan dari Gempuran Impor?</string>
    <string name="news_date_2">Jul 11 ~ 5.40 PM</string>

    <!-- Profile page -->
    <string name="header_profile">Profile</string>
    <string name="subheader_account">Account</string>
    <string name="subheader_security">Security</string>
    <string name="subheader_others">Others</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="bank_information">Bank Information</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="tentang_kami">About Us</string>
    <string name="help_center">Help Center</string>
    <string name="sign_out">Sign Out</string>

    <!--Camera page-->
    <string name="result">Process Result</string>
    <string name="info">The result is base on probability results. The highest probability, it’s more likely to become the result. For the best result, please refers to the guideline for taking the picture or consultation with a doctor who is already available on this application</string>
    <string name="daily_tips"> "1. Wash problem areas with a gentle cleanser. "\n"2. Try over-the-counter acne products to dry excess oil and promote peeling."\n"3. Avoid irritants."\n"4. Protect your skin from the sun."\n"5. Avoid friction or pressure on your skin."\n"6. Avoid touching or picking acne-prone areas."\n"7. Shower after strenuous activities." </string>

    <!--Activity Fragment-->
    <string name="doctor_a">Dr. Carly Ely, Sp.DV</string>
    <string name="doctor_b">Dr. John Elbert W, Sp.DV</string>
    <string name="doctor_c">Dr. Edward Wilson, Sp.KK</string>
    <string name="doctor_d">Dr. Clara Clarin Lius, Sp.DV</string>

    <string name="rating_a">5.0</string>
    <string name="rating_b">4.9</string>
    <string name="rating_c">5.0</string>
    <string name="rating_d">5.0</string>

    <string name="status">Online</string>

    <string name="years_a">12 years</string>
    <string name="years_b">11 years</string>
    <string name="years_c">9 years</string>
    <string name="years_d">6 years</string>

    <string name="price_a">Rp 135.000</string>
    <string name="price_b">Rp 110.000</string>
    <string name="price_c">Rp 95.000</string>
    <string name="price_d">Rp 60.000</string>

    <string name="personal_consul">Personal Consul</string>
    <string name="glowup_education">GlowUp Education</string>
    <string name="glowup_plan">GlowUp Plan</string>
    <string name="community">Community</string>

    <!--Survey page (1)-->
    <string name="header_survey">Survey</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter your age</string>

    <!--Survey page (2)-->
    <string name="type_of_skin">Type of Skin</string>
    <string name="type_of_skin_subheader">You can choose 1 type of skin</string>
    <string name="normal_type_skin">Normal Skin</string>
    <string name="oily_type_skin">Oily Skin</string>
    <string name="dry_type_skin">Dry Skin</string>
    <string name="acne_type_skin">Acne Skin</string>
    <string name="sensitive_type_skin">Sensitive Skin</string>
    <string name="combination_type_skin">Combination Skin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Personal Consul Page-->
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="canceled">Canceled</string>
    <string name="doctor_name">Doctor\'s name</string>
    <string name="doctor_number">Doctor\'s number</string>
    <string-array name="data_doctor_name">
        <item>Dr. Carly Ely, Sp.DV</item>
    </string-array>
    <string-array name="data_doctor_number">
        <item>446.1/8468/spdv/x/2010</item>
    </string-array>
    <integer-array name="data_doctor_photo">
        <item>@drawable/iv_doctor</item>
    </integer-array>
    <string name="you_havent_canceled">You haven\'t canceled any consultations</string>
    <string name="consult_our_doctor">consult our doctor to get a solution for\nyour skin problems</string>
    <string name="check_our_consulting">Check our consulting service</string>

    <!--Glowup Education Page-->
    <string name="search_hint_education">Find and discover skin-care tips here</string>
    <string name="title_education">Title</string>
    <string name="number_of_videos">Number of Video\'s</string>
    <string-array name="data_title_education">
        <item>Acne Prevention and Treatment</item>
        <item>Sun Protection and UV Awareness</item>
        <item>Understanding Skin Types</item>
    </string-array>
    <string-array name="data_doctor_name_education">
        <item>Dr. John Elbert W, Sp.DV</item>
        <item>Dr. Edward Wilson, Sp.KK</item>
        <item>Dr. Clara Clarin Lius, Sp.DV</item>
    </string-array>
    <string-array name="data_number_of_videos">
        <item>6 Video</item>
        <item>12 Video</item>
        <item>8 Video</item>
    </string-array>
    <integer-array name="data_doctor_photo_education">
        <item>@drawable/iv_doctor_b</item>
        <item>@drawable/iv_doctor_c</item>
        <item>@drawable/iv_doctor_d</item>
    </integer-array>

    <string name="week_1">13/05/2023</string>
    <string name="week_2">20/05/2023</string>
    <string name="week_3">27/05/2023</string>
    <string name="week_4">03/06/2023</string>
    <string name="week_5">03/06/2023</string>
    <string name="week_6">10/06/2023</string>
    <string name="week_7">17/06/2023</string>
    <string name="week_8">24/06/2023</string>

</resources>
