<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_main"
    tools:context=".ui.survey.SurveyActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_survey"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back_white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="25dp"
        android:paddingTop="30dp"
        android:paddingBottom="25dp"
        android:background="@drawable/bg_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_skin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gray_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/type_of_skin_subheader"
            android:textSize="14sp"
            android:textColor="@color/gray_subheader"
            app:layout_constraintTop_toBottomOf="@id/tv_type"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_subheader"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:drawableEnd="@drawable/custom_radio_button"
                android:text="@string/normal_type_skin"
                android:textSize="16sp"
                android:textColor="@color/gray_text" />

            <RadioButton
                android:id="@+id/rbOily"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:drawableEnd="@drawable/custom_radio_button"
                android:text="@string/oily_type_skin"
                android:textSize="16sp"
                android:textColor="@color/gray_text" />

            <RadioButton
                android:id="@+id/rbDry"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:drawableEnd="@drawable/custom_radio_button"
                android:text="@string/dry_type_skin"
                android:textSize="16sp"
                android:textColor="@color/gray_text" />

            <RadioButton
                android:id="@+id/rbAcne"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:drawableEnd="@drawable/custom_radio_button"
                android:text="@string/acne_type_skin"
                android:textSize="16sp"
                android:textColor="@color/gray_text" />

            <RadioButton
                android:id="@+id/rbSensitive"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:drawableEnd="@drawable/custom_radio_button"
                android:text="@string/sensitive_type_skin"
                android:textSize="16sp"
                android:textColor="@color/gray_text" />

            <RadioButton
                android:id="@+id/rbCombination"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:drawableEnd="@drawable/custom_radio_button"
                android:text="@string/combination_type_skin"
                android:textSize="16sp"
                android:textColor="@color/gray_text"/>

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>