<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.home.HomeFragment">

    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/bg_main"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:src="@drawable/ic_default_account_profile"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="12sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="@string/name"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_notification"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/iv_notification"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cart"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/iv_cart"/>

    </LinearLayout>

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/header_home"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:lineSpacingExtra="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_search_view"
            app:queryHint="@string/search_hint_home"
            app:iconifiedByDefault="false"
            android:theme="@style/SearchViewStyle" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/iv_filter"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_information_for_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subheader_home_1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/view_more"
            android:textSize="12sp"
            android:textColor="@color/gray_subheader"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>