<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/bg_education">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_text"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bg_bubble"
        tools:text="@string/title_education" />

    <TextView
        android:id="@+id/doctor_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/gray_text"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bg_bubble"
        tools:text="@string/doctor_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_video"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_button_purple"
        android:drawableLeft="@drawable/ic_play_video"
        android:drawablePadding="4dp"
        android:paddingLeft="2dp"
        android:paddingRight="12dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_name"
        tools:text="@string/number_of_videos" />

    <ImageView
        android:id="@+id/bg_bubble"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/iv_bg_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/btn_video"/>

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:src="@drawable/ic_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>